<resources>
    <string name="app_name">Droid Pong</string>
    <string name="press_to_start_single_player_game">Single Player Game</string>
    <string name="start_head_to_head_match">Head-to-Head Match</string>
    <string name="software_name_version">Droid Pong v1.0</string>
    <string name="company_name">MetalSoft Solutions</string>
    <string name="new_game_options">New Game Options</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="click_to_start">Press here to start ball</string>
    <string name="game_over">GAME OVER</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
</resources>
