<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fullscreen_content"
    android:background="#22B14C"
    tools:context="com.metalsoft.droidpong.PongActivity">

    <com.metalsoft.droidpong.GameAnimationView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    </LinearLayout>

    <TextView
        android:id="@+id/text_ball_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:text="@string/click_to_start"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_game_over"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="180sp"
        android:textSize="36sp"
        android:textColor="#FF0000"
        android:text="@string/game_over"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_end"
            android:layout_marginTop="160sp"
            android:text="@string/return_to_main_menu"
            android:layout_centerHorizontal="true"
            android:background="#22B14C"
            android:onClick="endGameClick"
            />

    </RelativeLayout>

</FrameLayout>
