<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1946BA">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_start"
        android:contentDescription="@string/splash_screen_logo"
        android:src="@drawable/aopp_3"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1946BA"
        android:paddingTop="18sp"
        android:text="@string/software_name_version"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1946BA"
        android:paddingBottom="18sp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:text="@string/company_name"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_game_options"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:backgroundTintMode="multiply"
        android:background="@drawable/custom_border"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/new_game_options"
            />

    <Button
        android:id="@+id/button_single_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4sp"
        android:background="#FFFFFF"
        android:textColor="#1946BA"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="8sp"
        android:drawableStart="@drawable/single"
        android:drawablePadding="8sp"
        android:onClick="startSingleGameClick"
        android:text="@string/press_to_start_single_player_game" />

    <Button
        android:id="@+id/button_hth_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:padding="4sp"
        android:background="#FFFFFF"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="#1946BA"
        android:layout_marginTop="8sp"
        android:drawableStart="@drawable/hth"
        android:drawablePadding="8sp"
        android:onClick="startHtHGameClick"
        android:text="@string/start_head_to_head_match" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:id="@+id/layout_score_list"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:backgroundTintMode="multiply"
        android:background="@drawable/custom_border"
        android:layout_marginTop="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/high_score_title"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="High Scores" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_header_titles"
            android:layout_below="@+id/high_score_title"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="Rank"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="Name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="Total Hits"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="Ratio"
                />

        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/high_scores_list"
            android:layout_below="@+id/score_header_titles">


        </ListView>



</RelativeLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>